--- a/classes/wizard/index.html
+++ b/classes/wizard/index.html
@@ -114,11 +114,11 @@
              
 
 <h1>法師</h1>
-<div id="intro"><p class="NoIndent">Dungeon World has rules. Not the laws of men or the rule of some petty tyrant. Bigger, better rules. You drop something—it falls. You can’t make something out of nothing. The dead stay dead, right?</p>
-<p>Oh, the things we tell ourselves to feel better about the long, dark nights.</p>
-<p>You’ve spent so very long poring over those tomes of yours. The experiments that nearly drove you mad and all the botched summonings that endangered your very soul. For what? For power. What else is there? Not just the power of King or Country but the power to boil a man’s blood in his veins. To call on the thunder of the sky and the churn of the roiling earth. To shrug off the rules the world holds so dear.</p>
-<p>Let them cast their sidelong glances. Let them call you “warlock” or “diabolist.” Who among them can hurl fireballs from their eyes?</p>
-<p>Yeah. We didn’t think so.</p></div>
+<div id="intro"><p class="NoIndent">地城世界自有規則。並非人類的律法或那些卑劣暴君所制定的規矩，而是更偉大、更重要的定理。放開手──然後物體就會落下。你不能無中生有，死者不能復生，對吧？</p>
+<p>噢，這不過是我們說給自己聽，在漫漫長夜中讓自己好過一點的藉口罷了。</p>
+<p>你竭盡歲月鑽研那些厚重典籍，重複那些幾乎要讓你瘋狂的實驗，召喚那些能危害你性命的存在。為了什麼？當然是為了力量，除此之外還能有什麼？你要的並不是王室或國家的權力，而是那能夠使人們體內血液沸騰的力量。它讓你能呼喚蒼穹中的霹靂，使大地忿怒震動，摒棄這世界如此珍視的無聊定理。</p>
+<p>放他們側目的視線去吧，儘管讓他們稱你為「魔導師」或「惡魔信徒」。他們之中又有誰能夠消除那映入他們眼中的火球呢？</p>
+<p>是啊，可不這麼想。</p></div>
 <hr/>
 <h2>名稱</h2>
 <div id="names"><p class="NoIndent"><b>精靈</b>: 格拉狄爾(Galadiir), 芬法里爾(Fenfaril), 莉莉雅斯翠(Lilliastre), 菲羅薩雷(Phirosalle), 安奇拉許(Enkirash), 哈維爾(Halwyr)</p> 
