--- a/gm/advanced_delving/index.html
+++ b/gm/advanced_delving/index.html
@@ -286,59 +286,118 @@
 	<li><strong>增加選項</strong>。 範例: 瞄準射擊 (遊俠).</li></ul>
 <hr/>
 
-<h2>改變基礎規則 (Changing the Basics)</h2>
-<p class="NoIndent">Moves can also change the basic structure of the game. Consider this one, to avoid the use of damage dice:</p>
-<p class="MoveOneLine">When you would deal damage, instead of rolling the dice, substitute each dice with the listed number. d4 becomes 2, d6 becomes 3, d8 becomes 4, d10 becomes 5, d12 becomes 6.</p>
-<p class="NoIndent">Moves like this change one of the basic features of the game. Be very careful with moves that muck with the fundamentals. Moves should never contradict the GM’s principles or agenda, or break the basic “take the action to gain the effect” rule.</p>
-<p>There are some parts of the game that are exceptionally easy to change. The amount of XP to level reflects our view, but you can easily make leveling more or less rare. As well, the kinds of things players are awarded XP for can be easily changed—if your game isn’t about exploring, fighting monsters and finding treasure, change the End of Session move to reflect that difference. Make sure to share it with your players before you start the game.</p>
-<p>Another basic that’s occasionally asked for is a way to make, say, fighting a dragon harder. The best answer here is that fighting a dragon is harder because the dragon is fictionally stronger. Just stabbing a dragon with a normal blade isn’t hack and slash because a typical blade can’t hurt it. If, however, that isn’t enough, consider this move from Vincent Baker, originally from Apocalypse World (reworded slightly to match Dungeon World rules):</p>
-<p class="MoveOneLine">When a player makes a move and the GM judges it especially difficult, the player takes -1 to the roll. When a player’s character makes a move and the GM judges it clearly beyond them, the player takes -2 to the roll.</p>
-<p class="NoIndent">The problem with this move is that the move no longer reflects anything concrete. Instead, the move is a prompt for the GM to make judgment calls with no clear framework. If you find yourself writing this custom move, consider what difficulty you’re really trying to capture and make a custom move for that instead. That said, this is a valid custom move, if you feel it’s needed.</p>
+<h2>改變基礎規則</h2>
+<p class="NoIndent">
+	動作也可以用來改變整個遊戲的基本架構。舉下面這個動作為例，它省略了擲骰決定傷害的過程：</p>
+<div class="Move">
+	<p>當你將要造成傷害時，不要擲骰，而是改為使用下面列出的數值來取代每顆骰子的結果。d4 變為 2，d6 變為 3，d8 變為 4，d10 變為 5，d12 變為 6。</p></div>
+<p class="NoIndent">
+	像這樣的動作可以改變整個遊戲的基本特徵。然而，當你使用這類動作來攪亂根基的機制時務必要非常小心。這些動作永遠不能違反GM的原則或目標事項、或打破「採取行動並獲得效果」的基本規則。</p>
+<p>
+	這個遊戲系統有幾個部分的規則特別容易被改變。比如說，升級所需的經驗值數量反映了我們對角色發展速度的看法，但你可以很輕易地讓升級速度變得更頻繁或稀有。同樣的，玩家們獲得經驗值的方式也可以被輕易地改變──如果你的遊戲並不專注於探索、打怪、和尋找財寶，那麼你也可以調整 聚會結束 動作的內容以反映其不同之處。但記得要確保你的玩家們都在你開始遊戲前就知道了這個調整。</p>
+<p>
+	另外一個會不時被提出的問題是該如何，比如說，讓與巨龍之間的戰鬥變得更加艱辛困難。最好的答案是，與巨龍交戰之所以會困難，是因為巨龍在故事層面上就明顯更加強大。僅僅是揮舞尋常刀劍往巨龍砍去並不會觸發砍劈動作，因為普通的武器根本無法傷害牠。然而，如果你覺得這樣還不夠，那麼你可以考慮使用下列這個動作，由文森特·貝克(Vincent Baker)最早寫於《啟示錄世界》（我們稍微改寫了一下，使其更符合地城世界的規則）：</p>
+<div class="Move">
+	<p>當玩家角色進行了某個動作且GM判斷該行動特別困難時，玩家的擲骰將承受 -1 減值。當玩家角色進行某個動作且GM判斷該行動明顯超出他們的能力所及時，玩家的擲骰將承受 -2 減值。</p></div>
+<p class="NoIndent">
+	這個動作的問題在於它並沒有反映出任何具體的事物。相反的，這個動作僅僅是做為一個提醒，讓GM在沒有明確框架的情況下做出裁斷。如果你發現自己正在撰寫類似這樣的自訂動作，思考一下你打算利用這個動作來處理什麼樣的困難情境，並改成為該情境特別撰寫一個自訂動作。也就是說，儘管它並不理想，但如果你覺得有需要的話，它仍然是一個可以拿來使用的自訂動作。</p>
 <hr/>
 
-<h2>動作的開發 (Development of a Move)</h2>
-<p class="NoIndent">Let’s look at how one move developed over time. Hack and slash was one of the earliest Dungeon World moves, originally written by Tony Dowler. The first version looked like this (this version has been reformatted and edited for grammar only):</p>
-<p class="MoveFirstLine">When you wade into combat, attacking your enemies, deal damage to the enemy you’re attacking, take that enemy’s damage, and roll+Str. ✴On a 10+, choose 2. ✴On a 7–9 choose 1.</p>
-<ul><li class="li">Prevent one ally from taking damage this round</li>
-<li class="li">Kill one enemy of lower level than you or deal max damage to otherwise</li>
-<li class="li">Put an enemy right where you want them (drive them off, prevent them from fleeing, etc.)</li>
-<li class="Lastli">Divide your damage amongst any number of targets you can reach with your weapon</li></ul>
-<p class="NoIndent">The first problem with this move is that one of the options, preventing damage, is far less useful than the others. Being able to outright kill an enemy is nearly always better than preventing that enemy from doing damage. The first major revision was to drop that option:</p>
-<p class="MoveFirstLine">When you wade into combat, attacking your enemies, deal damage to the enemy you’re attacking, take that enemy’s damage, and roll+Str. ✴On a 10+ choose 2. ✴On a 7–9 choose 1.</p>
-<ul><li class="li">Kill one enemy of lower level than you or deal max damage to otherwise</li>
-<li class="li">Put an enemy right where you want them (drive them off, prevent them from fleeing, etc.)</li>
-<li class="Lastli">Divide your damage amongst any number of targets you can reach with your weapon</li></ul>
-<p class="NoIndent">This left only three options which is a great number of options to have when a 10+ lets you pick two. The player making the move always had to not choose one option. All of the options are also clearly useful. But there’s still an issue, easily the biggest issue with this move: the fictional action doesn’t tightly relate to the outcome.</p>
-<p>Consider this situation: Gregor attacks an eagle lord with his mighty axe. He describes his fictional action: “I swing my axe right down on his wing with a big overhead chop.” Then he rolls the move, gets a 10, and makes his choices. Max damage is a clear choice and comes right from the fiction. The other options, however, don’t make much sense. If he chooses to divide his damage, how does that flow from his one fictional attack? How did that one chop also hit the treant behind him?</p>
-<p>Scoping down the fictional effect of the move lead to this version:</p>
-<p class="MoveOneLine">When you attack an enemy who can defend themselves, roll+Str. ✴On a 10+, you deal your damage but your enemy does not get to deal theirs to you. If you choose, you can take your enemy’s damage and deal double damage to the enemy. ✴On a 7–9, you take the enemy’s damage and deal your damage.</p>
-<p class="NoIndent">Here the move now has only the effects that could clearly follow from a single attack. Any action that couldn’t reasonably lead to a counterattack isn’t hack and slash, so now the trigger matches the effects. Unfortunately double damage was a bit much, so we changed it to this:</p>
-<p class="MoveOneLine">When you attack an enemy in melee, roll+Str. ✴On a 7–9, you deal your damage to the enemy and take their damage. ✴On a 10+ you deal your damage to the enemy. You can choose to also take the enemy’s damage to deal +2 damage.</p>
-<p class="NoIndent">+2 damage is a clear advantage, but not a game breaker. The only problem here is that it reduced the effects of an attack to taking damage. Monsters do so much more than just take away your HP; monsters hurl you about the room and destroy the ground you stand on, why can’t they do that in response?</p>
-<p class="MoveOneLine">When you attack an enemy in melee, roll+Str. ✴On a 10+, you deal your damage to the enemy and avoid their attack. At your option, you may choose to do +1d6 damage but expose yourself to the enemy’s attack. ✴On a 7–9, you deal your damage to the enemy and the enemy makes an attack against you.</p>
-<p class="NoIndent">This version (the final one) allows a monster to “attack” not just deal damage. That opens up a whole host of interesting monster moves to be used. +1d6 damage instead of +2 makes the choice more exciting (and slightly more powerful). The rewording adds clarity.</p>
+<h2>動作的發展演進</h2>
+<p class="NoIndent">
+	讓我們來看看動作是如何隨著時間而發展變化。「砍劈」動作是地城世界中最早期的動作之一，由湯尼．道爾(Tony Dowler)撰寫。它的第一版看起來像這樣（這個版本的文法被重新編輯和排版過）：</p>
+<div class="Move">
+<p class="NoIndent">
+	當你涉足戰鬥，攻擊你的敵人時，對你攻擊的目標造成傷害，承受敵人造成的傷害，並擲+力量。<br/>
+	✴擲出10+時，選擇二項。<br/>
+	✴擲出7-9時，選擇一項。</p>
+<ul>
+	<li>防止一名同伴在該輪中受到傷害</li>
+	<li>殺死一個等級比你低的敵人、或對其造成最大值的傷害</li>
+	<li>把一個敵人置於你希望他身處的情境（把他驅離、避免他逃跑、諸如此類）</li>
+	<li>將你的傷害分配給處於你武器攻擊範圍內任意數量的目標</li></ul></div>
+
+<p class="NoIndent">這個動作的第一個問題在於它的其中一個選項：防止同伴受到傷害，遠遠不如其他選項有用。能夠直接殺死敵人幾乎永遠會比阻止敵人造成傷害要來得有用。因此，我們在初次改訂時放棄了這個選項：</p>
+<div class="Move">
+<p class="NoIndent">
+	當你涉足戰鬥，攻擊你的敵人時，對你攻擊的目標造成傷害，承受敵人造成的傷害，並擲+力量。<br/>
+	✴擲出10+時，選擇二項。<br/>
+	✴擲出7-9時，選擇一項。</p>
+<ul>
+	<li>殺死一個等級比你低的敵人、或對其造成最大值的傷害</li>
+	<li>把一個敵人置於你希望他身處的情境（把他驅離、避免他逃跑、諸如此類）</li>
+	<li>將你的傷害分配給處於你武器攻擊範圍內任意數量的目標</li></ul></div>
+
+<p class="NoIndent">
+	這個改訂僅僅留下了三個選項，對於在擲出10+結果時可以挑選二個選項的狀況來說，這個數量可說是非常理想。進行這個動作的玩家永遠必須至少放棄其中的一個選項，而且這些選項都有著明顯的用途。然而，這個動作還存在著另外一個問題，甚至可以說是這個動作中最大的問題：它故事層面上的行動和結果之間並不存在緊密的關聯性。</p>
+<p>
+	想像一下這個情況：葛瑞格使用他猛烈的戰斧攻擊眼前的鷹王。他描述他在故事中的行動：「我揮舞我的斧頭，一發氣勢洶洶的斬擊砍向牠的翅膀。」，接著他為該動作擲骰，得到10，並做出選擇。造成傷害最大值是個明確的選項且確實源自於敘事脈絡，但其他的選項就不怎麼合理了。如果葛瑞格選擇分攤他造成的傷害，那故事中的那一擊究竟是怎麼導致這個結果？那一斧該如何才能同時命中位於他身後的樹人呢？</p>
+<p>
+	於是，在限縮這個動作的敘事影響後，我們得到了這個版本：</p>
+<div class="Move">
+<p class="NoIndent">
+	當你<strong>攻擊一名有能力防衛的敵人</strong>時，擲擲+力量。<br/>
+	✴擲出10+時，你對敵人造成傷害，而你的敵人無法對你造成傷害。你也可以選擇承受敵人造成的傷害並改為對它造成雙倍的傷害。<br/>
+	✴擲出7-9時，你承受敵人造成的傷害，並對敵人造成你的傷害。</p></div>
+
+<p class="NoIndent">
+	現在，這個動作只剩下了單次攻擊能夠確實導致的效果。且任何讓對手無法合理進行反擊的行動也都不再被視為砍劈動作，因此現在它的觸發條件終於與它的效果相符。然而不幸的是，雙倍傷害還是有點太超過，因此我們把它改成了這樣：</p>
+<div class="Move">
+<p class="NoIndent">
+	當你<strong>以近戰肉搏攻擊敵人</strong>時，擲+力量。<br/>
+	✴擲出7-9時，你對敵人造成傷害，且敵人也對你造成傷害。<br/>
+	✴擲出10+時，你對敵人造成傷害，你還可以再選擇承受敵人造成的傷害並額外對它造成+2傷害。</p></div>
+
+<p class="NoIndent">
+	+2 傷害是個明確的優勢，也不會到破壞遊戲的程度。這裡唯一的問題是：它限縮了攻擊帶來的影響，只剩下造成傷害的效果。事實上，怪物能做到的事遠遠不只有消減你的生命值；怪物可以把你扔到另一個房間，也可以摧毀你所站立的地面──為什麼不讓牠們這樣做呢？</p>
+<div class="Move">
+<p class="NoIndent">
+	當你<strong>以近戰肉搏攻擊敵人</strong>時，擲+力量。<br/>
+	✴擲出10+時，你對敵人造成傷害並避開其攻擊。你也可以選擇造成額外+1d6傷害，但將自己暴露在敵人的攻擊之下。<br/>
+	✴擲出7-9時，你對敵人造成傷害，但敵人的攻擊也擊中了你。</p></div>
+
+<p class="NoIndent">
+	這個版本（最終版）的砍劈動作允許怪物「攻擊」，而非僅僅造成傷害。這讓你得以運用一系列有趣的怪物動作來回應玩家們的攻擊行動。使用 +1d6 傷害來取代 +2 傷害也讓這個選項變得更加刺激（並稍微強化）。最後，我們也重新選用措辭，讓這個動作的句意更加清楚。</p>
 <hr/>
 
-<h2>GM規範 (The GM)</h2>
-<p class="NoIndent">Changing the GM’s side of the rules is an entirely different beast from writing custom player moves. Writing GM moves is the easy part. Since a GM move is just a statement of something that fictionally happens, feel free to write new ones as you please. Most of the time you’ll find they’re just specific cases of one of the moves already established, but occasionally you’ll come across something new. Just keep in mind the spectrum of hard to soft moves, your principles, and your agenda, and you’ll be fine.</p>
-<p>Changing the GM’s agenda or principles is one of the biggest changes you can make to the game. Changing these areas will likely require changes throughout the rest of the game, plus playtesting to nail it all down.</p>
-<p><strong>Play to find out what happens</strong> is the least changeable part of the GM’s agenda. Other options, like “play towards your set plot” or “play to challenge the players’ skills” will be resisted pretty strongly by the other rules. The moves give the players abilities that can change the course of an planned adventure quite quickly; if you’re not playing to find out what happens you’ll have to resist the moves at every step or rewrite many of them.</p>
-<p><strong>Fill the characters’ lives with adventure</strong> could be rephrased, but it’s hard to really change. “Fill the characters’ lives with intrigue” might work, but intrigue just seems like a type of adventure. Removing this agenda entirely will require major reworking since the move structure is based on this. The effects of a miss and the GM’s soft moves are all there to create a life of adventure.</p>
-<p><strong>Portraying a fantastic world</strong> is maybe the easiest to change but it still requires considerable rewriting of the class moves. A historical world, a grim world, or a utopian world are all possible, but you’ll need to carefully rethink many moves. A historical world will require magic, equipment, and several other sections to be nearly entirely rewritten or removed. A grim world can only survive if the players’ moves come with darker costs. A utopian world won’t need many of the moves as written. Still, this is the easiest part of the agenda to change, since it requires changing the moves, not the basic structures of the game.</p>
-<p>The GM’s principles are more mutable than the agenda but still can seriously change the game with only minor modifications. <strong>Address the characters, not the players; Make your move, but misdirect; Never speak the name of your move; Begin and end with the fiction;</strong> and <strong>Be a fan of the characters</strong> are the most important principles. Without these the conversation of play and the use of moves is likely to break down.</p>
-<p><strong>Embrace the fantastic; Give every monster life; Name every person; Think Dangerous;</strong> and <strong>Give them something to work towards</strong> are key to the spirit of Dungeon World and fantasy exploration. These are changeable, but they amount to changing the setting of the game. If you want to change any of these, you may have to make changes to all of them.</p>
-<p><strong>Leave Blanks; Sometimes, let them decide;</strong> and <strong>Ask questions and use the answers</strong> are important to running Dungeon World well. They also apply to many other games in the same style. The game will be diminished without them, but the conversation of play will continue. These are also some of the most portable principles, applicable to many other games. They may even work in games with very different play styles.</p>
-<p>An additional principle that some people prefer to add is <strong>Test their bonds</strong>. This principle is entirely compatible with the others and with all the moves, but it changes the focus of the game somewhat. Fronts need to be rethought to work fully with this, and you might need to add moves that speak to it.</p>
+<h2>GM側的規則</h2>
+<p class="NoIndent">
+	說到改造GM側的規則，那可是一頭與自訂玩家動作截然不同的洪水猛獸。如果只是單純要撰寫GM動作的話倒還簡單，由於GM動作只不過是一段描述在故事中發生的事情的句子，因此你大可以想到什麼就寫什麼。大部分情況下，你會發現你新撰寫的GM動作其實就是某個現有GM動作的其中一個具體實例，但偶爾，你可能會寫出全新的GM動作。就算這樣也不用擔心，只要把你的目標事項、你的原則、以及軟硬動作之間的層級謹記在心，那麼一切就都會順利。</p>
+<p>
+	修改GM的目標事項或原則，將會是你在遊戲中所能做出的最大改變。倘若你動到這些領域，那麼你很有可能會需要一併調整這個遊戲的其他規則機制，並且進行遊戲測試來確保一切安好。</p>
+<p>
+	<strong>用玩的來看看會發生什麼事</strong> 是GM目標事項中最不該被變動的項目。其他像是「讓遊戲向著你設定的劇情發展」或「用玩的來挑戰玩家們的技術」的選項將嚴重牴觸到其他的規則部分。「動作」這個機制賦予了玩家輕易改變冒險發展的能力；因此如果你不打算用玩的來看看會發生什麼事，那麼你將不得不抵制遊戲中每個動作帶來的影響、或乾脆重寫大部分的動作。</p>
+<p>
+	<strong>讓角色們的生命充滿冒險</strong> 的措辭可以被調整，但很難被真正的改變。「讓角色們的生命充滿陰謀詭計」或許能行，但陰謀詭計在這裡看起來也只不過就是另一種類型的冒險。徹底把這個目標事項移除掉將會導致你需要重新打造大部分的遊戲系統，因為整個動作的機制架構都是基於這條目標事項而存在的。擲骰失敗時的影響、以及GM的軟動作全都是為此而被用來創造出一個充滿刺激冒險的人生。</p>
+<p>
+	<strong>描繪出一個奇幻世界</strong> 或許是最容易改寫的目標事項，但這麼做仍會需要你重新翻修許多職業底下的動作。把它改成一個基於歷史的世界、殘忍嚴酷的世界、或烏托邦世界都是可行的，但你將必須仔細地重新考慮很多動作的內容和調性。如果你想要描繪出一個寫實歷史的世界，那麼你會需要把關於魔法、裝備、和許多其他的章節幾乎整個重新翻修或移除。一個殘忍嚴酷的世界只有在玩家們的動作伴隨著更加黑暗深沉的代價時才能營造出相應的氛圍。而相比之下，烏托邦世界則可能不會需要你改寫太多的動作。儘管可能會費許多功夫，但這個目標事項仍然會是你最容易改寫的項目，畢竟它要求的僅僅是把動作重寫，而不至於動到整個遊戲的基本結構。</p>
+<p>
+	相比目標事項，GM的原則會更容易改寫，但就算只是輕微的改動仍可能對遊戲帶來巨大的變化。 <strong>對角色說話，而非對玩家; 進行合乎發展的動作; 永遠不要說出你動作的名字; 以敘事開始，以敘事做結;</strong> 和 <strong>成為角色們的迷弟迷妹</strong> 是最為重要的原則。沒有它們，整個遊戲對話的過程和動作的使用將很有可能因此分崩離析。</p>
+<p>
+	<strong>擁抱奇幻; 賦予每個怪物生命; 為每個人物命名; 構思危險;</strong> 和 <strong>*給他們某個努力的方向</strong> 代表著地城世界和奇幻探索精神的關鍵。它們可以被改變，但這同時也代表你改變了整個遊戲的設定。如果你打算改變其中任何一個，那麼你很有可能也會需要改變它們全部。</p>
+<p>
+	<strong>適度留白; 有時候，*讓他們決定;</strong> 和 <strong>詢問並利用得到的答案</strong> 對於你主持地城世界的表現來說相當重要。它們同時能應用在其他許多相同類型的遊戲中。它們同時也是其中幾個容易移植的GM原則，被許多其他遊戲所使用。它們甚至能在許多風格截然不同的角色扮演遊戲中發揮作用。</p>
+<p>
+	其中一個被許多GM偏好的額外原則是 <strong>考驗他們的羈絆</strong>。這個原則兼容於其他原則、乃至於所有遊戲中的動作，但仍會在某種程度上改變整個遊戲的焦點。你將會需要重新考慮你準備的前置好讓它們能與這個新原則互相作用，且你可以會需要添加幾個額外的動作來為這個原則發聲。</p>
+
+<p style="color:#999; font-size:0.6em">譯者註：*記號的原則為原始文檔在草創階段時留下來的誤記，這些原則並沒有列在地城世界的正式規則中，但仍可以拿來參考。</p>
 <hr/>
 
-<h2>怪物 (Monsters)</h2>
-<p class="NoIndent">The easiest place to modify monsters is in the questions used to create them. The simplest changes have to do with adjusting lethality or randomness to your liking.</p>
-<p>A more interesting change is to change the questions being asked to present a different view of monsters. The views built into the questions imply that monsters are more or less like other creatures: they can be of many alignments and won’t always be opposed to the player characters. If you want to make Dungeon World about hunting down evil monsters and destroying them, you might rewrite some of the questions, maybe adding this:</p>
-<h4>The monster is Evil through and through. Choose one to reflect why it’s evil:</h4>
-<ul><li>It’s an intrusion of the Old Ones Beyond the Walls: Planar, +5 damage</li>
-<li>It’s a product of the Old Wizards of the Red Tower: Construct, +5 HP</li>
-<li>It’s from The Time Before Man: Primordial, +5 damage, +5 HP</li></ul>
-<p>When creating new monster questions you can either reinterpret existing monsters by answering the questions for them again or only use the new questions for new monsters. If the new questions you add or change are key to your vision of Dungeon World it’s best to redo all the monsters you use; if the question only applies to a specific kind of monster anyway you can just use it for new monsters.</p>
+<h2>怪物</h2>
+<p class="NoIndent">
+	至於改寫怪物規則的部分，最簡單的方法就是從用來創建牠們的問題著手。而其中最單純的改動則是根據你的喜好調整牠們的致命程度或者隨機性。</p>
+<p>
+	另一種更加有趣的改動方式是修改這些怪物創建的提問，以呈現出另一種看待怪物的觀點。原本問題中預設的觀點暗示了這些怪物與其他生物或多或少有相似之處：牠們可以屬於各種不同的陣營，且不一定總是會與玩家角色們對立。因此，如果你打算創造出一個主軸為狩獵並消滅邪惡生物的地城世界遊戲，那麼你可能會想添加以下這個問題：</p>
+<div class="Move">
+<p class="NoIndent" style="color:#000;font-weight: bold;">
+	這頭怪物是個徹頭徹尾邪惡的存在。選擇一項以反映出牠之所以邪惡的原因：</p>
+<ul class="tagList">
+	<li>牠是屬於世界境外那舊日支配者的入侵勢力: <tag>異位面</tag>, <tag class="line">+5 傷害</tag></li>
+	<li>牠是朱紅之塔老法師的造物: <tag>構裝體</tag>, <tag class="line">+5 HP</tag></li>
+	<li>牠來自人類之前的時代: <tag>原初</tag>, <tag class="line">+5 傷害</tag>, <tag class="line">+5 HP</tag></li></ul></div>
+
+<p>
+	當你撰寫新的怪物問題，你可以透過再次回答這些問題來重新詮釋已經存在的怪物、或是僅僅針對新的怪物使用這些新的提問。如果這些你添加或修改的新問題是你看待地城世界觀點的關鍵，那麼你最好把它應用到所有你使用的怪物上，重新詮釋牠們；但如果這些提問僅僅適用於特定種類的怪物，那麼你可以只把它用在新的怪物上就好。</p>
 
 
           </div>
