--- a/monsters/planes/index.html
+++ b/monsters/planes/index.html
@@ -114,17 +114,17 @@
              
 <h1>位面勢力</h1>
 <h3 class="MonsterName">天使 (Angel)	<span class="Tags">單獨, 駭人, 神聖, 聰穎, 組織</span></h3>
-<p class="MonsterStats">Sword of Flames (b[2d10]+4 傷害, 無視護甲), 18 HP, 4 護甲</p>
+<p class="MonsterStats">烈焰寶劍 (b[2d10]+4 傷害, 無視護甲), 18 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 強力</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Wings</p>
+<p class="MonsterQualities"><strong>特性:</strong> 羽翼</p>
 <p class="MonsterDescription">“So was it written that the heavens opened up to Avra’hal and did an angel from the clouds emerge to speak unto her and so did it appear to her as her firstborn daughter—beautiful, of ebon skin and golden eyes—and did Avra’hal weep to see it. ‘Be not afraid,’ it commanded her. ‘Go to the villages I have shown you in your dreams and unto them show the word I have written on your soul.’ Avra’hal wept and wept and did agree to do this and did take up her sword and tome and did into the villages go, a great thirst for blood on her lips for the word the angel wrote upon the soul of Avra’hal was ‘kill’.” <em>Instinct</em>: To share divine will</p>
 <ul><li>Deliver visions and prophecy</li>
 <li>Stir mortals to action</li>
 <li>Expose sin and injustice</li></ul>
 <h3 class="MonsterName">猬魔 (Barbed Devil)	<span class="Tags">單獨, 大型, 異位面, 駭人</span></h3>
-<p class="MonsterStats">Spines (d10+3 傷害, 3 穿透), 16 HP, 3 護甲</p>
+<p class="MonsterStats">棘刺 (d10+3 傷害, 3 穿透), 16 HP, 3 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠, 毀亂</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Spines</p>
+<p class="MonsterQualities"><strong>特性:</strong> 棘刺</p>
 <p class="MonsterDescription">There are a thousand forms of devil, maybe more. Some common and some unique. Each time the Inquisitors discover a new one they write it into the Tormentors Codex and the knowledge is shared among the abbeys in the hope that atrocities of that particular sort won’t find their way into the world again. The barbed devil has long been known to the brothers and sisters of the Inquisition. It appears only at a site of great violence or when called by a wayward summoner. Covered in sharp quills, this particular demon revels in the spilling of blood, preferably by impaling victims piecemeal or in whole upon its thorns and letting them die there. Cruel but not particularly effective beyond slaughter. A low inquisitorial priority. <em>Instinct</em>: To rend flesh and spill blood</p>
 <ul><li>Impale someone</li>
 <li>Kill indiscriminately</li></ul>
