--- a/monsters/woods/index.html
+++ b/monsters/woods/index.html
@@ -167,7 +167,8 @@
 <p class="MonsterStats">壓制藤鞭 (低[2d8]傷害), 12 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 植物</p>
-<p class="MonsterDescription">More beautiful by far than any man or woman born in the civil realms. To gaze upon one is to fall in love. Deep and punishing, too. Thing is, they don’t love—not the fleshy folk who often find them, anyway. Their love is a primal thing, married to the woods—to a great oak that serves as home and mother and sacred place to them. It’s a curse to see one, too, they’ll never love you back. No matter what you do. No matter how you pledge yourself to them, they’ll always spurn you. If ever their oak comes to harm, you’ve not only the dryad’s wrath to contend with, but in every nearby village there’s a score of men with a secret longing in their heart, ready to murder you where you sleep for just a smile from such a creature. <b>本能</b>: 熱愛自然</p>
+<p class="MonsterDescription">
+	遠比那些生於世俗的男女要美麗得多。僅僅一個凝視就能使人墜入愛河。這愛是如此深沉、令人勞碌，但問題在於，她們並不會去愛──至少，不是那些經常找尋她們的那些血肉之民的那種愛。她們的愛是原始的，她們與森林姻合──與那高聳橡木連理，將之視為她們的家園、母親、以及至聖之地。因此，見到她們無異於一種詛咒，因為她們永遠不會回報你的愛。無論你做了什麼、無論你立下如何的承諾誓言，她們永遠會把你拒斥門外。而一旦她們摯愛的橡樹遭到傷害，你要面對的不僅僅是樹精們的怒火：在附近每一個村莊裡都有一小搓的人在心底懷抱著那不為人知的渴望，小心點，哪怕只是為了得到她臉上的一抹微笑，他們也已隨時準備好在你安睡之處奪走你的性命。 <b>本能</b>: 熱愛自然</p>
 <ul>
 	<li>引誘一個凡人</li>
 	<li>融身入樹</li>
@@ -176,7 +177,8 @@
 <p class="MonsterStats">禽爪 (高[2d8]+1 傷害, 1 穿透), 10 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 強健飛翼</p>
-<p class="MonsterDescription">Some the size of horses. Bigger, even—the kings and queens of the eagles. Their cry pierces the mountain sky and woe to those who fall under the shadow of their mighty wings. The ancient wizards forged a pact with them in the primordial days. Men would take the plains and valleys and leave the mountaintops to the eagle lords. These sacred pacts should be honored, lest they set their talons into you. Lucky are the elves, for the makers of their treaties yet live and when danger comes to elvish lands, the eagle lords often serve as spies and mounts for them. Long-lived and proud, some might be willing to trade their ancient secrets for the right price, too. <b>本能</b>: 掌管高空</p>
+<p class="MonsterDescription">
+	有些的體型如駿馬一般，而群鷹之王與后則又更甚巨大。牠們的叫聲穿透了山間的蒼空，也宣告了那落入牠們雙翼陰影下受害者的災難。在原初的古老時代，巫師們與牠們之間簽訂了一項協議：人們能佔據平原與山丘，但必須將山峰之巔留給鷹王。這聖契是應當被尊崇的，以免牠們的禽爪無情地落在你身上。那些精靈們是幸運的，因為他們之中那些簽下協議的族人們仍然活著，當危險降臨到精靈的土地時，鷹王經常會做為他們的密探和坐騎。牠們長壽而驕傲，其中某些個體或許也會願意用牠們古老的秘密來換取某個合適的價碼。 <b>本能</b>: 掌管高空</p>
 <ul>
 	<li>從天空襲擊</li>
 	<li>將某人抓到空中</li>
@@ -185,25 +187,29 @@
 <p class="MonsterStats">利劍 (高[2d6] 傷害), 3 HP, 2 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 敏銳感官</p>
-<p class="MonsterDescription">”As with all things they undertake, the elves approach war as an art. I saw them fight, once. The Battle of Astrid’s Veil. Yes, I am that old, boy, now hush. A warrior-maiden, she was clad in plate that shone like the winter sky. White hair streaming and a pennant of ocean blue tied to her spear. She seemed to glide between the trees the way an angel might, striking out and bathing her blade in blood that steamed in the cold air. I never felt so small before. I trained with the master-at-arms of Battlemoore, you know. I’ve held a sword longer than you’ve been alive, boy, and in that one moment I knew that my skill meant nothing. Thank the gods the elves were with us then. A more beautiful and terrible thing I have never seen.” <b>本能</b>: 追尋完美</p>
-<ul><li>Strike at a weak point</li>
-<li>Set ancient plans in motion</li>
-<li>Use the woods to advantage</li></ul>
+<p class="MonsterDescription">
+	「就跟他們從事的所有工作一樣，精靈們把戰爭當作一門藝術。我曾看過他們戰鬥……阿絲特里德的面紗之戰，對，我就是那麼老，孩子，現在安靜點聽我說。我看見一名精靈女戰士，她披著如冬季天空一樣明亮的盔甲，雪白的髮絲娟柔飄揚，一席海藍色的旗幟纏綁在她的戰矛上。她在樹林間擺盪飛舞的姿態彷彿天使，降下打擊，並讓刀刃沐浴在冰冷空氣下那蒸騰的鮮血之中。我從未感到自己是如此的渺小過。你知道，我曾在戰穆爾的衛官長手下受過訓練，孩子，我握著劍的時間比你的人生還要長，但就在那一刻，我知道我長久以來鍛鍊的技巧毫無意義。感謝諸神那些精靈當時是站在我們這一邊。這是我見過最美麗、也最可怕的事情了。」 <b>本能</b>: 追尋完美</p>
+<ul>
+	<li>打擊弱點</li>
+	<li>將古老的計畫付諸行動</li>
+	<li>利用森林中的優勢</li></ul>
 <h3 class="MonsterName">精靈高等秘術師 (Elvish High Arcanist)	<span class="Tags">單獨, 魔法, 聰穎, 組織</span></h3>
 <p class="MonsterStats">秘法之火 (d10 傷害, 無視護甲), 12 HP, 0 護甲</p>
 <p class="MonsterStats"><span class="Tags">短程, 遠程</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> 敏銳感官</p>
-<p class="MonsterDescription">True elvish magic isn’t like the spells of men. Mannish wizardry is all rotes and formulas. They cheat to find the arcane secrets that resound all around them. They are deaf to the arcane symphony that sings in the woods. Elvish magic requires a fine ear to hear that symphony and the voice with which to sing. To harmonize with what is already resounding. Men bind the forces of magic to their will; Elves simply pluck the strings and hum along. The High Arcanists, in a way, have become more and less than any elf. The beat of their blood is the throbbing of all magic in this world. <b>本能</b>: To unleash power</p>
-<ul><li>Work the magic that nature demands</li>
-<li>Cast forth the elements</li></ul>
+<p class="MonsterDescription">True elvish magic isn’t like the spells of men. Mannish wizardry is all rotes and formulas. They cheat to find the arcane secrets that resound all around them. They are deaf to the arcane symphony that sings in the woods. Elvish magic requires a fine ear to hear that symphony and the voice with which to sing. To harmonize with what is already resounding. Men bind the forces of magic to their will; Elves simply pluck the strings and hum along. The High Arcanists, in a way, have become more and less than any elf. The beat of their blood is the throbbing of all magic in this world. <b>本能</b>: 釋放力量</p>
+<ul>
+	<li>發揮大自然所要求的魔法</li>
+	<li>施放元素力量</li></ul>
 <h3 class="MonsterName">獅鷲獸 (Griffin)	<span class="Tags">集團, 大型, 組織</span></h3>
 <p class="MonsterStats">禽爪 (d8+3 傷害), 10 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 及遠, 強力</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> Wings</p>
-<p class="MonsterDescription">On first glance, one might mistake the griffin for another magical mistake like the manticore or the chimera. It looks the part, doesn’t it? These creatures have the regal haughtiness of a lion and the arrogant bearing of an eagle, but they temper those with the unshakeable loyalty of both. To earn the friendship of a griffin is to have an ally all your living days. Truly a gift, that. If you’re ever lucky enough to meet one be respectful and deferential above all else. It may not seem it but they can perceive the subtlest slights and will answer them with a sharp beak and talons. <b>本能</b>: To serve allies</p>
-<ul><li>Judge someone’s worthiness</li>
-<li>Carry an ally aloft</li>
-<li>Strike from above</li></ul>
+<p class="MonsterDescription">On first glance, one might mistake the griffin for another magical mistake like the manticore or the chimera. It looks the part, doesn’t it? These creatures have the regal haughtiness of a lion and the arrogant bearing of an eagle, but they temper those with the unshakeable loyalty of both. To earn the friendship of a griffin is to have an ally all your living days. Truly a gift, that. If you’re ever lucky enough to meet one be respectful and deferential above all else. It may not seem it but they can perceive the subtlest slights and will answer them with a sharp beak and talons. <b>本能</b>: 服侍同伴</p>
+<ul>
+	<li>評斷某人的價值</li>
+	<li>將一名同伴帶到空中</li>
+	<li>從天空襲擊</li></ul>
 <h3 class="MonsterName">山丘巨人 (Hill Giant)	<span class="Tags">集團, 巨型, 聰穎, 組織</span></h3>
 <p class="MonsterStats">投擲巨岩 (d8+3 傷害), 10 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">及遠, 短程, 遠程, 強力</span></p>
@@ -233,7 +239,7 @@
 <p class="MonsterStats">衝鋒 (低[2d8] 傷害), 10 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterQualities"><strong>特性:</strong> Enchantment</p>
-<p class="MonsterDescription">One of only a very few creatures to be found in the old woods that don’t outright want to maim, kill, or eat us. They dwell in glades pierced by the sun, and dance on their funny goat-legs to enchanting music played on pipes made of bone and silver. They smile easily and, so long as you please them with jokes and sport, will treat our kind with friendliness. They’ve a mean streak, though, so if you cross them, make haste elsewhere; very few things hold a grudge like the stubborn satyr. <b>本能</b>: To enjoy</p>
+<p class="MonsterDescription">One of only a very few creatures to be found in the old woods that don’t outright want to maim, kill, or eat us. They dwell in glades pierced by the sun, and dance on their funny goat-legs to enchanting music played on pipes made of bone and silver. They smile easily and, so long as you please them with jokes and sport, will treat our kind with friendliness. They’ve a mean streak, though, so if you cross them, make haste elsewhere; very few things hold a grudge like the stubborn satyr. <b>本能</b>: 享樂</p>
 <ul><li>Pull others into revelry through magic</li>
 <li>Force gifts upon them</li>
 <li>Play jokes with illusions and tricks</li></ul>
@@ -267,7 +273,7 @@
 <h3 class="MonsterName">狼人 (Werewolf)	<span class="Tags">單獨, 聰穎</span></h3>
 <p class="MonsterStats">啃咬 (d10+2 傷害, 1 穿透), 12 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身, 毀亂</span></p>
-<p class="MonsterQualities"><strong>特性:</strong> Weak to silver</p>
+<p class="MonsterQualities"><strong>特性:</strong> 弱點為銀製品</p>
 <p class="MonsterDescription">“Beautiful, isn’t it? The moon, I mean. She’s watching us, you know? Her pretty silver eyes watch us while we sleep. Mad, too—like all the most beautiful ones. If she were a woman, I’d bend my knee and make her my wife on the spot. No, I didn’t ask you here to speak about her, though. The chains? For your safety, not mine. I’m cursed, you see. You must have suspected. The sorcerer-kings called it “lycanthropy” in their day—passed on by a bite to make more of our kind. No, I could find no cure. Please, don’t be scared. You have the arrows I gave you? Silver, yes. Ah, you begin to understand. Don’t cry, sister. You must do this for me. I cannot bear more blood on my hands. You must end this. For me.” <b>本能</b>: To shed the appearance of civilization</p>
 <ul><li>Transform to pass unnoticed as beast or man</li>
 <li>Strike from within</li>
