--- a/introduction/index.html
+++ b/introduction/index.html
@@ -154,16 +154,16 @@
 <p>沒有你，他們就會迷失。在鮮血與黑暗之中燒出通往前方的道路吧，神行客。</p>
 
 <h2>盜賊</h2>
-<p class="NoIndent">You’ve heard them, sitting around the campfire. Bragging about this battle or that, or about how their gods are smiling on your merry band. You count your coins and smile to yourself—this is the thrill above all. You alone know the secret of Dungeon World: filthy, filthy lucre.</p> 
-<p>Sure, they give you lip for all the times you’ve snuck off alone, but without you, every one of them would have been dissected by a flying guillotine or poisoned straight to death by some ancient needle trap. So let them complain. When you’re done with all this delving you’ll toast their heroes’ graves.</p>
-<p>From your castle. Full of gold. You rogue.</p>
+<p class="NoIndent">你曾聽著他們圍坐營火，吹噓著他們在這裡那裡的英勇戰鬥、訴說著他們的神是如何眷顧你們這愉快和諧的團隊。你獨自點著你的金幣，對著自己微笑──這才是最令人興奮的。只有你知道地城世界的秘密：那些骯髒、醜陋的不義之財。</p> 
+<p>當然，他們會對你每次獨自偷溜的行為頗有微詞。但沒有你，他們每個人要不早就被那飛舞的斷頭刀切成碎片、或早已因那古老的毒針陷阱而死。所以，就放任他們抱怨吧，當你終於搞定這些狗屁之後，你將在他們的英雄墓旁舉杯。</p>
+<p>在你的城堡，黃金滿載。這就是你。</p>
 
 <h2>法師</h2>
-<p class="NoIndent">Dungeon World has rules. Not the laws of men or the rule of some petty tyrant. Bigger, better rules. You drop something—it falls. You can’t make something out of nothing. The dead stay dead, right?</p>
-<p>Oh, the things we tell ourselves to feel better about the long, dark nights.</p>
-<p>You’ve spent so very long poring over those tomes of yours. Conducting experiments that nearly drove you mad and casting summonings that endangered your very soul. For what? For power. What else is there? Not just the power of King or Country but the power to boil a man’s blood in his veins. To call on the thunder of the sky and the churn of the roiling earth. To shrug off the rules the world holds so dear.</p>
-<p>Let them cast their sidelong glances. Let them call you “warlock” or “diabolist.” Who among them can hurl fireballs from their eyes?</p>
-<p>Yeah. Didn’t think so.</p></div>
+<p class="NoIndent">地城世界自有規則。並非人類的律法或那些卑劣暴君所制定的規矩，而是更偉大、更重要的定理。放開手──然後物體就會落下。你不能無中生有，死者不能復生，對吧？</p>
+<p>噢，這不過是我們說給自己聽，在漫漫長夜中讓自己好過一點的藉口罷了。</p>
+<p>你竭盡歲月鑽研那些厚重典籍，重複那些幾乎要讓你瘋狂的實驗，召喚那些能危害你性命的存在。為了什麼？當然是為了力量，除此之外還能有什麼？你要的並不是王室或國家的權力，而是那能夠使人們體內血液沸騰的力量。它讓你能呼喚蒼穹中的霹靂，使大地忿怒震動，摒棄這世界如此珍視的無聊定理。</p>
+<p>放他們側目的視線去吧，儘管讓他們稱你為「魔導師」或「惡魔信徒」。他們之中又有誰能夠消除那映入他們眼中的火球呢？</p>
+<p>是啊，可不這麼想。</p></div>
 <hr>
 
 <h1>為什麼？</h1>
