--- a/classes/thief/index.html
+++ b/classes/thief/index.html
@@ -114,9 +114,9 @@
              
 
 <h1>盜賊</h1>
-<div id="intro"><p class="NoIndent">你曾聽著他們圍坐營火，吹噓著他們在這裡那裡的英勇戰鬥、訴說著他們的神是如何眷顧你們這愉快和諧的團隊。你獨自點著你的金幣，對著自己微笑──這才是最令人興奮的。只有你知道地城世界的秘密：那些骯髒、醜陋的不義之財。</p> 
-<p>當然，他們會對你每次獨自偷溜的行為頗有微詞。但沒有你，他們每個人要不早就被那飛舞的斷頭刀切成碎片、或早已因那古老的毒針陷阱而死。所以，就放任他們抱怨吧，當你終於搞定這些狗屁之後，你將在他們的英雄墓旁舉杯。</p>
-<p>在你的城堡，黃金滿載。這就是你。</p></div>
+<div id="intro"><p class="NoIndent">你聽到他們圍坐著營火，吹噓著一場一場英勇的戰鬥，談論神明如何青睞這幫微醺的快樂夥伴。而你獨自在一旁數著金幣，忍不住咧嘴微笑－－只有你才知道地城世界最令人刺激的秘密，就是那些骯髒、下流的金子。</p> 
+<p>當然，你每每獨自偷溜都讓他們頗有微詞。但少了你，他們要不早就被飛舞的斷頭刀切成碎片、就是死在古老的毒針陷阱上頭。他們要抱怨就隨他們吧，等你鑽完這些狗洞，就輪到你朝他們的英雄塚舉杯了。</p>
+<p>在你金杯玉箸的城堡裡舉杯，爽啦。</p></div>
 <hr/>
 <h2>名稱</h2>
 <div id="names"><p class="NoIndent"><b>半身人</b>: 菲力克斯(Felix), 盧克(Rook), 小鼠(Mouse), 斯凱奇(Sketch), 崔西(Trixie), 羅賓(Robin), 歐瑪爾(Omar), 布琳(Brynn), 小蟲(Bug)</p>
