--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 <h2 id="license">翻譯</h2>
 本站係由 <a href="https://buzzfirefox.wixsite.com/freeandopentrpg">免費開源TRPG中文化團隊</a> 翻譯架設。<br>
-翻譯者：Hazmole, 阿腎, Eska, 洪偉, 盧靜, 藍刺蝟, 貓街的艾薇, 鬱鬱, Tak Pui Lo
+翻譯者：Hazmole, 阿腎, Eska, 盧靜, 洪偉, 藍刺蝟, 貓街的艾薇, 鬱鬱, Tak Pui Lo
           </div>
        </div>
     </div>
