--- a/introduction/index.html
+++ b/introduction/index.html
@@ -154,16 +154,16 @@
 <p>沒有你，他們就會迷失。在鮮血與黑暗之中燒出通往前方的道路吧，神行客。</p>
 
 <h2>盜賊</h2>
-<p class="NoIndent">你曾聽著他們圍坐營火，吹噓著他們在這裡那裡的英勇戰鬥、訴說著他們的神是如何眷顧你們這愉快和諧的團隊。你獨自點著你的金幣，對著自己微笑──這才是最令人興奮的。只有你知道地城世界的秘密：那些骯髒、醜陋的不義之財。</p> 
-<p>當然，他們會對你每次獨自偷溜的行為頗有微詞。但沒有你，他們每個人要不早就被那飛舞的斷頭刀切成碎片、或早已因那古老的毒針陷阱而死。所以，就放任他們抱怨吧，當你終於搞定這些狗屁之後，你將在他們的英雄墓旁舉杯。</p>
-<p>在你的城堡，黃金滿載。這就是你。</p>
+<p class="NoIndent">你聽到他們圍坐著營火，吹噓著一場一場英勇的戰鬥，談論神明如何青睞這幫微醺的快樂夥伴。而你獨自在一旁數著金幣，忍不住咧嘴微笑－－只有你才知道地城世界最令人刺激的秘密，就是那些骯髒、下流的金子。</p> 
+<p>當然，你每每獨自偷溜都讓他們頗有微詞。但少了你，他們要不早就被飛舞的斷頭刀切成碎片、就是死在古老的毒針陷阱上頭。他們要抱怨就隨他們吧，等你鑽完這些狗洞，就輪到你朝他們的英雄塚舉杯了。</p>
+<p>在你金杯玉箸的城堡裡舉杯，爽啦。</p>
 
 <h2>法師</h2>
-<p class="NoIndent">地城世界自有規則。並非人類的律法或那些卑劣暴君所制定的規矩，而是更偉大、更重要的定理。放開手──然後物體就會落下。你不能無中生有，死者不能復生，對吧？</p>
-<p>噢，這不過是我們說給自己聽，在漫漫長夜中讓自己好過一點的藉口罷了。</p>
-<p>你竭盡歲月鑽研那些厚重典籍，重複那些幾乎要讓你瘋狂的實驗，召喚那些能危害你性命的存在。為了什麼？當然是為了力量，除此之外還能有什麼？你要的並不是王室或國家的權力，而是那能夠使人們體內血液沸騰的力量。它讓你能呼喚蒼穹中的霹靂，使大地忿怒震動，摒棄這世界如此珍視的無聊定理。</p>
-<p>放他們側目的視線去吧，儘管讓他們稱你為「魔導師」或「惡魔信徒」。他們之中又有誰能夠消除那映入他們眼中的火球呢？</p>
-<p>是啊，可不這麼想。</p></div>
+<p class="NoIndent">地城世界有它的規則。不是凡人的法律也不是可悲暴君的規矩，而是更偉大、更完善的規則－－放開手東西就會落下、無中不能生有、死者不能復生，對吧？</p>
+<p>對，那些人們用來在漫漫長夜裡讓自己好過一點的規則。</p>
+<p>你竭盡人生鑽研厚重的典籍，重複讓你瀕臨瘋狂的實驗，召喚能危害你性命的存在。這都是為了什麼？當然是為了力量，不然呢？你要的不是王室或國家的權力，而是可以煮沸人血的法力。你會用它呼喚蒼穹中的霹靂，震撼翻騰的大地，將這世界珍視的無聊規則棄如敝履。</p>
+<p>庸人愛看就讓他們看，隨他們愛叫你「魔道士」還是「惡魔信徒」。難道他們的目光還會化為火球？</p>
+<p>呵，最好是會。</p></div>
 <hr>
 
 <h1>為什麼？</h1>
