--- a/classes/wizard/index.html
+++ b/classes/wizard/index.html
@@ -114,11 +114,11 @@
              
 
 <h1>法師</h1>
-<div id="intro"><p class="NoIndent">地城世界自有規則。並非人類的律法或那些卑劣暴君所制定的規矩，而是更偉大、更重要的定理。放開手──然後物體就會落下。你不能無中生有，死者不能復生，對吧？</p>
-<p>噢，這不過是我們說給自己聽，在漫漫長夜中讓自己好過一點的藉口罷了。</p>
-<p>你竭盡歲月鑽研那些厚重典籍，重複那些幾乎要讓你瘋狂的實驗，召喚那些能危害你性命的存在。為了什麼？當然是為了力量，除此之外還能有什麼？你要的並不是王室或國家的權力，而是那能夠使人們體內血液沸騰的力量。它讓你能呼喚蒼穹中的霹靂，使大地忿怒震動，摒棄這世界如此珍視的無聊定理。</p>
-<p>放他們側目的視線去吧，儘管讓他們稱你為「魔導師」或「惡魔信徒」。他們之中又有誰能夠消除那映入他們眼中的火球呢？</p>
-<p>是啊，可不這麼想。</p></div>
+<div id="intro"><p class="NoIndent">地城世界有它的規則。不是凡人的法律也不是可悲暴君的規矩，而是更偉大、更完善的規則－－放開手東西就會落下、無中不能生有、死者不能復生，對吧？</p>
+<p>對，那些人們用來在漫漫長夜裡讓自己好過一點的規則。</p>
+<p>你竭盡人生鑽研厚重的典籍，重複讓你瀕臨瘋狂的實驗，召喚能危害你性命的存在。這都是為了什麼？當然是為了力量，不然呢？你要的不是王室或國家的權力，而是可以煮沸人血的法力。你會用它呼喚蒼穹中的霹靂，震撼翻騰的大地，將這世界珍視的無聊規則棄如敝履。</p>
+<p>庸人愛看就讓他們看，隨他們愛叫你「魔道士」還是「惡魔信徒」。難道他們的目光還會化為火球？</p>
+<p>呵，最好是會。</p></div>
 <hr/>
 <h2>名稱</h2>
 <div id="names"><p class="NoIndent"><b>精靈</b>: 格拉狄爾(Galadiir), 芬法里爾(Fenfaril), 莉莉雅斯翠(Lilliastre), 菲羅薩雷(Phirosalle), 安奇拉許(Enkirash), 哈維爾(Halwyr)</p> 
